# prompt-saver

./: .gitignore  README.md  index.html  package-lock.json  package.json  push-updates.command  vite.config.js
.github/: release-body.md
.github/workflows/: release.yml
Prompt Saver Control.app/Contents/: Info.plist  document.wflow
Prompt Saver Control.app/Contents/MacOS/: Automator Application Stub
Prompt Saver Control.app/Contents/_CodeSignature/: CodeResources
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
