[package]
name = "prompt-saver"
version = "1.4.2"
description = "Prompt Saver"
authors = ["Prompt Saver Community"]
license = "MIT"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.5.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
walkdir = "2"
